# word-cloud

./: README.md  pyproject.toml
backend/: db.sqlite3
backend/app/: __init__.py  routes.py  views.py
backend/backend/: settings.py  urls.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: index.js
frontend/src/assets/: errorImg.js
frontend/src/components/wordCloud/: index.js  index.scoped.css
