[tool.poetry]
name = "word-cloud"
version = "0.1.0"
description = "Django Version"
authors = ["Abeautifulsnow <1491444340@qq.com>"]
license = "MIT LICENSE"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-cors-headers = "^3.10.0"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
